--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,9 +1,10 @@
 spring.application.name=app
 
+server.port = 8089
 # PostgreSQL Database Configuration
-spring.datasource.url=jdbc:postgresql://172.232.118.182:5432/storedb
+spring.datasource.url=jdbc:postgresql://localhost:5432/storedb
 spring.datasource.username=postgres
-spring.datasource.password=mydbpassword
+spring.datasource.password=postgres
 spring.datasource.driver-class-name=org.postgresql.Driver
 
 # JPA / Hibernate settings
